* ext/date/date_parse.c (date_zone_to_diff): add RB_GC_GUARD.   [ruby-dev:44337] [Bug #5152]

* ext/date/data_parse.c (parse_ddd_cb): ditto.

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@32896 b2dd03c8-39d4-4d8f-98ff-823fe69b080e